--- a/examples/core/index.html
+++ b/examples/core/index.html
@@ -153,10 +153,14 @@
             transform: translateY(-2px);
         }
 
-        .hoverable-item.hovered {
-            background: #4CAF50;
+        .hoverable-item.force-hover {
+            background: #e0e0e0;
+            transform: translateY(-2px);
+        }
+
+        .hoverable-item.clicked {
+            background: #45a049;
             color: white;
-            border-color: #45a049;
         }
     </style>
 </head>
@@ -175,7 +179,7 @@
 
         <div class="controls">
             <button class="start-btn" id="startBtn">Start Tracking</button>
-            <button class="stop-btn" id="stopBtn" disabled>Stop Tracking</button>
+            <button class="stop-btn" id="stopBtn" data-hoverable="true" disabled>Stop Tracking</button>
         </div>
 
         <div class="hoverable-demo">
@@ -221,6 +225,7 @@
         const startBtn = document.getElementById('startBtn');
         const stopBtn = document.getElementById('stopBtn');
         const status = document.getElementById('status');
+        const hoverableItems = document.querySelectorAll('.hoverable-item');
 
         // Initialize camera
         async function initCamera() {
@@ -250,6 +255,8 @@
 
             tracker = new HandTracker({
                 hoverDelay: 2000,
+                sensitivityX: 1.5,
+                sensitivityY: 1.5,
                 cursorImageUrl: 'data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTcgMkwxNyAxMkw3IDIyVjJaIiBmaWxsPSIjNGNhZjUwIi8+Cjwvc3ZnPgo='
             });
 
@@ -297,6 +304,14 @@
         // Event listeners
         startBtn.addEventListener('click', startTracking);
         stopBtn.addEventListener('click', stopTracking);
+        hoverableItems.forEach(item => {
+            item.addEventListener('click', () => {
+                item.classList.add('clicked');
+                setTimeout(() => {
+                    item.classList.remove('clicked');
+                }, 2000);
+            });
+        });
 
         // Cleanup on page unload
         window.addEventListener('beforeunload', stopTracking);
