ci: remove examples from packages update

--- a/examples/core/index.html
+++ b/examples/core/index.html
@@ -185,19 +185,19 @@
         <div class="hoverable-demo">
             <div class="hoverable-item" data-hoverable="true">
                 <h3>Button 1</h3>
-                <p>Hover with your hand</p>
+                <p>Touch me</p>
             </div>
             <div class="hoverable-item" data-hoverable="true">
                 <h3>Button 2</h3>
-                <p>Point your index finger</p>
+                <p>Hover with your hand</p>
             </div>
             <div class="hoverable-item" data-hoverable="true">
                 <h3>Button 3</h3>
-                <p>Try different gestures</p>
+                <p>Control virtual mouse</p>
             </div>
             <div class="hoverable-item" data-hoverable="true">
                 <h3>Button 4</h3>
-                <p>Virtual mouse control</p>
+                <p>And steady to click</p>
             </div>
         </div>
 
@@ -206,10 +206,10 @@
             <ul>
                 <li>Allow camera access when prompted</li>
                 <li>Click "Start Tracking" to begin hand tracking</li>
-                <li>Point your index finger at the screen to control the virtual cursor</li>
+                <li>Use your hand to control the virtual cursor</li>
                 <li>Hover over the buttons above to see them highlight</li>
-                <li>Hold your finger steady for 2 seconds to trigger hover events</li>
-                <li>Click "Stop Tracking" to end the session</li>
+                <li>Hold your hand steady for 1 second to trigger button action</li>
+                <li>Point at "Stop Tracking" to end the session</li>
             </ul>
         </div>
     </div>
@@ -254,7 +254,7 @@
             if (!stream) return;
 
             tracker = new HandTracker({
-                hoverDelay: 2000,
+                hoverDelay: 1000,
                 sensitivityX: 1.5,
                 sensitivityY: 1.5,
                 cursorImageUrl: 'data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTcgMkwxNyAxMkw3IDIyVjJaIiBmaWxsPSIjNGNhZjUwIi8+Cjwvc3ZnPgo='
@@ -309,7 +309,7 @@
                 item.classList.add('clicked');
                 setTimeout(() => {
                     item.classList.remove('clicked');
-                }, 2000);
+                }, 3000);
             });
         });
 
